Simplifying flattening logic. Removed nested function classes making nested a generic function. Updating nested to use function name as column name differing from legacy implementation. Adding IT tests to cover additional non-nested type cases.
Signed-off-by: forestmvey <forestv@bitquilltech.com>